--- a/src/Trace/views/onlinemall/banner/index.html
+++ b/src/Trace/views/onlinemall/banner/index.html
@@ -11,9 +11,8 @@
         <div class="col-xs-4 right">
             <ul class="page-breadcrumb" style="float: right">
                 <li>
-                    <button class="btn btn-primary blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
+                    <button class="btn btn-sm blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
                 </li>
-               
             </ul>
         </div>
     </div>
