--- a/src/Trace/views/series/index.html
+++ b/src/Trace/views/series/index.html
@@ -1,78 +1,45 @@
 ﻿<div ng-controller="views.series.index as vm">
     <div class="page-bar">
-        <ul class="page-breadcrumb">
-            <li>
-                <i class="fa fa-hand-o-right"></i>
-                <a href="#">活动管理</a>
-            </li>
-        </ul>
-    </div>
-    <button ng-click="vm.show()">显示</button>
-
-    <div class="portlet light bordered">
-        <div baidu-map="f72BmbnulkYkxmS3YGqz94CTmutP0jbL" map-ready="vm.mapReady(map,draw)" overlays="vm.overlays" style="height: 470px">
+        <div class="page-bar">
+            <div class="col-xs-8">
+                <ul class="page-breadcrumb">
+                    <li>
+                        <i class="fa fa-hand-o-right"></i>
+                        <a href="#">系列管理</a>
+                    </li>
+                </ul>
+            </div>
+         
         </div>
-      <!--  <div id="map" style="height: 470px; -webkit-transition: all 0.5s ease-in-out; transition: all 0.5s ease-in-out;"></div>-->
-
     </div>
-    <!--<script type="text/javascript">
-        // 百度地图API功能
-        var map = new BMap.Map('map');
-        var poi = new BMap.Point(116.307851, 40.057031);
-        map.centerAndZoom(poi, 16);
-        map.enableScrollWheelZoom();
-
-        var overlays = [];
-        //回调获得覆盖物信息
-        var overlaycomplete = function (e) {
-            overlays.push(e.overlay);
-            var result = "";
-            result = "<p>";
-            result += e.drawingMode + ":";
-            if (e.drawingMode == window.BMAP_DRAWING_MARKER) {
-                result += ' 坐标：' + e.overlay.getPosition().lng + ',' + e.overlay.getPosition().lat;
-                if ($('isInfowindow').checked) {
-                    searchInfoWindow.open(e.overlay);
-                }
-            }
-            if (e.drawingMode == BMAP_DRAWING_CIRCLE) {
-                result += ' 半径：' + e.overlay.getRadius();
-                result += ' 中心点：' + e.overlay.getCenter().lng + "," + e.overlay.getCenter().lat;
-            }
-            if (e.drawingMode == BMAP_DRAWING_POLYLINE || e.drawingMode == BMAP_DRAWING_POLYGON || e.drawingMode == BMAP_DRAWING_RECTANGLE) {
-                result += ' 所画的点个数：' + e.overlay.getPath().length;
-            }
-            result += "</p>";
-            $("showOverlayInfo").style.display = "none";
-            $("panel").innerHTML += result; //将绘制的覆盖物信息结果输出到结果面板
-        };
-
-        var styleOptions = {
-            strokeColor: "red",    //边线颜色。
-            fillColor: "red",      //填充颜色。当参数为空时，圆形将没有填充效果。
-            strokeWeight: 3,       //边线的宽度，以像素为单位。
-            strokeOpacity: 0.8,    //边线透明度，取值范围0 - 1。
-            fillOpacity: 0.6,      //填充的透明度，取值范围0 - 1。
-            strokeStyle: 'solid' //边线的样式，solid或dashed。
-        }
-        //实例化鼠标绘制工具
-        var drawingManager = new BMapLib.DrawingManager(map, {
-            isOpen: false, //是否开启绘制模式
-            enableDrawingTool: true, //是否显示工具栏
-            drawingToolOptions: {
-                anchor: BMAP_ANCHOR_TOP_RIGHT, //位置
-                offset: new BMap.Size(5, 5), //偏离值
-                scale: 0.8 //工具栏缩放比例
-            },
-            circleOptions: styleOptions, //圆的样式
-            polylineOptions: styleOptions, //线的样式
-            polygonOptions: styleOptions, //多边形的样式
-            rectangleOptions: styleOptions //矩形的样式
-        });
-
-        //添加鼠标绘制工具监听事件，用于获取绘制结果
-        drawingManager.addEventListener("overlaycomplete", overlaycomplete);
-    </script>-->
+    <div class="portlet light bordered">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="portlet light">
+                    <div class="portlet-title">
+                        <div class="caption">
+                            <span class="caption-subject bold uppercase">
+                                系列树
+                            </span>
+                        </div>
+                        <div class="actions">
+                            <a 
+                               ng-click="vm.organizationTree.addUnit(null)" class="btn btn-circle btn-default">
+                                <i class="fa fa-plus"></i> 添加系列
+                            </a>
+                        </div>
+                    </div>
+                    <div class="portlet-body">
+                        <div id="OrganizationUnitEditTree"></div>
+                        <div ng-if="!vm.organizationTree.unitCount" class="text-muted">
+                          暂无数据
+                        </div>
+                    </div>
+                </div>
+            </div>
+           
+        </div>
+    </div>
 </div>
 
 
