--- a/src/Trace/views/achievement/medal/index.html
+++ b/src/Trace/views/achievement/medal/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-8">
+            <div class="col-xs-6">
                 <div class="form-group form-md-line-input">
                     <label class="col-md-2 control-label">类别</label>
                     <div class="col-md-3">
@@ -47,8 +47,19 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col-xs-4">
+            <div class="col-xs-3">
+                <div class="form-group form-md-line-input">
+                    <label class="col-md-4 control-label">分类</label>
+                    <div class="col-md-8">
+                        <select ng-model="vm.table.filter.state"
+                                class="form-control edited" ui-validate="'$value>0'"
+                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                        <div class="form-control-focus"> </div>
+                    </div>
+                 
+                </div>
+            </div>
+            <div class="col-xs-3">
                 <div class="form-group form-md-line-input has-info">
                     <div class="input-group input-group-sm">
                         <div class="input-group-control">
