--- a/src/Trace/views/trace/index.html
+++ b/src/Trace/views/trace/index.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="views.achievement.trace.index as vm">
+﻿<div ng-controller="views.trace.index as vm">
     <div class="page-bar">
         <div class="col-xs-9">
             <ul class="page-breadcrumb">
@@ -23,10 +23,10 @@
         <div class="row">
             <div class="col-xs-8">
                 <div class="form-group form-md-line-input">
-                    <label class="col-md-3 control-label">类别</label>
+                    <label class="col-md-2 control-label">类别</label>
                     <div class="col-md-3">
                         <select ng-model="vm.table.filter.state"
-                                class="form-control edited" ui-validate="'$value>0'"
+                                class="form-control edited" ui-validate="'$value>0'" 
                                 ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
                         <div class="form-control-focus"> </div>
                     </div>
@@ -49,7 +49,7 @@
                 <div class="form-group form-md-line-input has-info">
                     <div class="input-group input-group-sm">
                         <div class="input-group-control">
-                            <input type="text" class="form-control input-sm" placeholder="按条件搜索" ng-model="vm.table.filter.name">
+                            <input type="text" class="form-control input-sm" placeholder="游迹名称" ng-model="vm.table.filter.name">
                         </div>
                         <span class="input-group-btn btn-right">
                             <button ng-click="vm.init()" class="btn green-haze" type="button">查询</button>
@@ -68,9 +68,7 @@
                         <th>一级分类</th>
                         <th>二级分类</th>
                         <th>三级分类(系列)</th>
-                        <th>积分</th>
-                        <th>成就值</th>
-                        <th>称号</th>
+                        <th>状态</th>
                         <th>操作</th>
                     </tr>
                 </thead>
@@ -81,8 +79,6 @@
                         <td>{{row.c}}</td>
                         <td>{{row.balance}}</td>
                         <td>{{row.balance}}</td>
-                        <td>{{row.balance}}</td>
-                        <td>{{row.email}}</td>
                         <td>{{row.email}}</td>
                         <td>
                             <button type="button" ng-click="vm.modify(row)" class="btn btn-sm btn-default">
