--- a/src/Trace/views/statistical/overview/index.html
+++ b/src/Trace/views/statistical/overview/index.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="views.statistical.index as vm">
+﻿<div ng-controller="views.statistical.overview.index as vm">
     <div class="page-bar">
         <div class="col-xs-9">
             <ul class="page-breadcrumb">
