--- a/src/Trace/views/onlinemall/banner/modal.html
+++ b/src/Trace/views/onlinemall/banner/modal.html
@@ -59,9 +59,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-4 center-align">
+                <div class="col-xs-4"></div>
+                <div class="col-xs-4">
                     <div class="tiles">
-                        <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                        <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
                             <div class="tile-body">
                                 <i class="fa fa-cloud-upload"></i>
                             </div>
@@ -77,7 +78,7 @@
                         </ol>
                     </div>
                 </div>
-
+                <div class="col-xs-4"></div>
             </div>
         </div>
         <div class="modal-footer">
