--- a/src/Trace/views/onlinemall/product/modify.html
+++ b/src/Trace/views/onlinemall/product/modify.html
@@ -75,9 +75,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-4 center-align">
+                        <div class="col-xs-4"></div>
+                        <div class="col-xs-4">
                             <div class="tiles">
-                                <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
                                     <div class="tile-body">
                                         <i class="fa fa-cloud-upload"></i>
                                     </div>
@@ -93,6 +94,7 @@
                                 </ol>
                             </div>
                         </div>
+                        <div class="col-xs-4"></div>
 
                     </div>
                 </div>
@@ -166,17 +168,23 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-4">
+                        <div class="col-xs-6">
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-3 control-label">选择标签:</label>
+                                <label class="col-md-3 control-label">选择标签</label>
                                 <div class="col-md-9">
-                                    <input type="text" class="form-control"
-                                           ng-class="{'edited':vm.model.name}" placeholder="选择标签" maxlength="120"
-                                           required ng-model="vm.model.name">
+                                    <div ng-file-select="vm.file.onFileSelect($files)"
+                                         data-multiple="vm.file.multiple" title="选择图片"
+                                         onclick="this.value = null"
+                                         class="btn btn-upload">点击上传图片</div>
+                                    <ol>
+                                        <li ng-repeat="(k,v) in vm.file.selectFiles">
+                                            {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
+                                        </li>
+                                    </ol>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-8">
+                        <div class="col-xs-6">
                             <div class="col-xs-4">
                                 <label>单一商品</label>
                                 <input type="radio" name="type" value="0" ng-model="vm.activity.type"/>
@@ -192,11 +200,11 @@
                     </div>
 
                     <div class="row">
-                      
                         <div class="col-xs-6">
-                            <div class="col-xs-4 center-align">
+                            <div class="col-xs-4"></div>
+                            <div class="col-xs-4">
                                 <div class="tiles">
-                                    <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                    <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
                                         <div class="tile-body">
                                             <i class="fa fa-cloud-upload"></i>
                                         </div>
@@ -212,11 +220,13 @@
                                     </ol>
                                 </div>
                             </div>
+                            <div class="col-xs-4"></div>
                         </div>
                         <div class="col-xs-6">
-                            <div class="col-xs-4 center-align">
+                            <div class="col-xs-4"></div>
+                            <div class="col-xs-4">
                                 <div class="tiles">
-                                    <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                    <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
                                         <div class="tile-body">
                                             <i class="fa fa-cloud-upload"></i>
                                         </div>
@@ -232,6 +242,7 @@
                                     </ol>
                                 </div>
                             </div>
+                            <div class="col-xs-4"></div>
                         </div>
                     </div>
 
