--- a/src/Trace/views/achievement/medal/index.html
+++ b/src/Trace/views/achievement/medal/index.html
@@ -5,7 +5,7 @@
 
                 <li>
                     <i class="fa fa-hand-o-right"></i>
-                    <a href="#">纪念章管理</a>
+                    <a href="#">成就管理</a>
                 </li>
             </ul>
         </div>
@@ -51,9 +51,9 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-4 control-label">分类</label>
                     <div class="col-md-8">
-                        <select ng-model="vm.table.filter.state"
+                        <select ng-model="vm.table.filter.cates"
                                 class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.cates"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                  
@@ -77,11 +77,14 @@
             <table st-table="vm.table.data" class="table table-striped">
                 <thead>
                     <tr>
-                        <th st-sort="a">攻略名称</th>
-                        <th>创建时间</th>
-                        <th>兑换积分</th>
-                        <th>库存</th>
-                        <th>类型</th>
+                        <th st-sort="a">成就名称</th>
+                        <th>一级分类</th>
+                        <th>二级分类</th>
+                        <th>三级分类</th>
+                        <th>积分</th>
+                        <th>纪念章数量</th>
+                        <th>成就值</th>
+                        <th>称号</th>
                         <th>状态</th>
                         <th>操作</th>
                     </tr>
