--- a/src/Trace/views/achievement/medal/modify.html
+++ b/src/Trace/views/achievement/medal/modify.html
@@ -3,8 +3,8 @@
         <ul class="page-breadcrumb">
             <li>
                 <i class="fa fa-hand-o-right"></i>
-                <a ng-if="!vm.activity.id" href="#">添加成就</a>
-                <a ng-if="vm.activity.id" href="#">编辑成就: {{vm.activity.title}}</a>
+                <a ng-if="!vm.product.id" href="#">添加成就</a>
+                <a ng-if="vm.product.id" href="#">编辑成就: {{vm.product.title}}</a>
             </li>
         </ul>
     </div>
@@ -16,8 +16,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-4 control-label">成就名称</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="成就名称"
-                                       required ng-model="vm.activity.title">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="成就名称"
+                                       required ng-model="vm.product.title">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -27,8 +27,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-4 control-label">系列名称</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="系列名称"
-                                       required ng-model="vm.activity.title">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="系列名称"
+                                       required ng-model="vm.product.title">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -37,8 +37,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-4 control-label">达成条件</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="达成条件"
-                                       required ng-model="vm.activity.title">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="达成条件"
+                                       required ng-model="vm.product.title">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -48,10 +48,10 @@
                 <div class="row">
                     <div class="col-xs-4">
                         <div class="form-group form-md-line-input">
-                            <label class="col-md-3 control-label">积分</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="积分"
-                                       required ng-model="vm.activity.title">
+                            <label class="col-md-4 control-label">积分</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="积分"
+                                       required ng-model="vm.product.title">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -59,20 +59,20 @@
                     </div>
                     <div class="col-xs-4">
                         <div class="form-group form-md-line-input">
-                            <label class="col-md-3 control-label">成就值</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="成就值"
-                                       required ng-model="vm.activity.title">
+                            <label class="col-md-4 control-label">成就值</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="成就值"
+                                       required ng-model="vm.product.title">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="form-group form-md-line-input">
-                            <label class="col-md-3 control-label">称号</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="称号"
-                                       required ng-model="vm.activity.title">
+                            <label class="col-md-4 control-label">称号</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="称号"
+                                       required ng-model="vm.product.title">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -82,8 +82,8 @@
                 <div class="row">
                     <div class="col-xs-4">
                         <div class="form-group form-md-line-input">
-                            <label class="col-md-3 control-label">系列</label>
-                            <div class="col-md-9">
+                            <label class="col-md-4 control-label">系列</label>
+                            <div class="col-md-8">
                                 <select ng-model="vm.table.filter.state"
                                         class="form-control edited" ui-validate="'$value>0'"
                                         ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
@@ -135,18 +135,33 @@
                         </div>
                     </div>
                     <div class="col-xs-6">
-                        <div class="col-xs-4">
-                            <label>基础成就</label>
-                            <input type="radio" name="type" value="0" ng-model="vm.activity.type" />
+                        <div class="form-group form-md-radios">
+                            <div class="md-radio-inline">
+                                <div class="md-radio">
+                                    <input type="radio" id="radio6" name="radio2" class="md-radiobtn" value="0" checked
+                                            ng-model="vm.product.type">
+                                    <label for="radio6">
+                                        <span></span>
+                                        <span class="check"></span>
+                                        <span class="box"></span> 基础成就
+                                    </label>
+                                </div>
+                                <div class="md-radio">
+                                    <input type="radio" id="radio7" name="radio2" class="md-radiobtn" value="1"
+                                            ng-model="vm.product.type">
+                                    <label for="radio7">
+                                        <span></span>
+                                        <span class="check"></span>
+                                        <span class="box"></span> 组合成就
+                                    </label>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-xs-4">
-                            <label>组合成就</label>
-                            <input type="radio" name="type" value="1" ng-model="vm.activity.type" />
-                        </div>
-                        <div class="col-xs-4">
-                            <button type="button" ng-click="vm.cancel()">绑定纪念章</button>
-                        </div>
+                     
                     </div>
+                </div>
+                <div ng-if="vm.product.type==1" class="row">
+                    添加批量
                 </div>
                 <div class="row">
                     <div class="col-xs-4"></div>
