--- a/src/Trace/views/achievement/trace/index.html
+++ b/src/Trace/views/achievement/trace/index.html
@@ -1,11 +1,11 @@
-﻿<div ng-controller="views.achievement.medal.index as vm">
+﻿<div ng-controller="views.achievement.trace.index as vm">
     <div class="page-bar">
         <div class="col-xs-9">
             <ul class="page-breadcrumb">
 
                 <li>
                     <i class="fa fa-hand-o-right"></i>
-                    <a href="#">纪念章成就管理</a>
+                    <a href="#">游迹成就管理</a>
                 </li>
             </ul>
         </div>
