--- a/src/Trace/views/achievement/trace/modify.html
+++ b/src/Trace/views/achievement/trace/modify.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="views.achievement.medal.modify as vm">
+﻿<div ng-controller="views.achievement.trace.modify as vm">
     <div class="page-bar">
         <ul class="page-breadcrumb">
             <li>
