--- a/src/Trace/views/onlinemall/product/modify.html
+++ b/src/Trace/views/onlinemall/product/modify.html
@@ -12,7 +12,8 @@
             <ul class="page-breadcrumb" style="float:right">
                 <li>
                     <div class="md-checkbox has-info">
-                        <input type="checkbox" id="checkbox16" ng-model="state" ng-click="!state" class="md-check">
+                        <input type="checkbox" id="checkbox16" ng-model="vm.product.is_badge"
+                                ng-click="!vm.product.is_badge" class="md-check">
                         <label for="checkbox16">
                             <span></span>
                             <span class="check"></span>
@@ -25,7 +26,7 @@
     </div>
     <div class="portlet light bordered">
         <form name="modalform" role="form" novalidate class="form-validation">
-            <div ng-if="state" class="row">
+            <div ng-if="vm.product.is_badge" class="row">
                 <div class="modal-title">
                     纪念章属性
                 </div>
@@ -36,8 +37,8 @@
                                 <label class="col-md-3 control-label">纪念章名称:</label>
                                 <div class="col-md-9">
                                     <input type="text" class="form-control" 
-                                           ng-class="{'edited':vm.model.name}" placeholder="纪念章名称" maxlength="120"
-                                           required ng-model="vm.model.name">
+                                           ng-class="{'edited':vm.product.badge_name}" placeholder="纪念章名称" maxlength="120"
+                                           required ng-model="vm.product.badge_name">
                                 </div>
                             </div>
                         </div>
@@ -45,21 +46,21 @@
                             <div class="form-group form-md-line-input">
                                 <label class="col-md-3 control-label">选择系列</label>
                                 <div class="col-md-3">
-                                    <select ng-model="vm.table.filter.state"
-                                            class="form-control edited" ui-validate="'$value>0'"
-                                            ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                    <select ng-model="vm.product.badge_category1"
+                                            class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(1)"
+                                            ng-class="{'edited':vm.product.badge_category1>0}" ng-options="m.id as m.name for m in vm.cate.a"></select>
                                     <div class="form-control-focus"> </div>
                                 </div>
                                 <div class="col-md-3">
-                                    <select ng-model="vm.table.filter.state"
-                                            class="form-control edited" ui-validate="'$value>0'"
-                                            ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                    <select ng-model="vm.product.badge_category2"
+                                            class="form-control edited" ui-validate="'$value>0'"  ng-change="vm.cate.change(2)"
+                                            ng-class="{'edited':vm.product.badge_category2>0}" ng-options="m.id as m.name for m in vm.cate.b"></select>
                                     <div class="form-control-focus"> </div>
                                 </div>
                                 <div class="col-md-3">
-                                    <select ng-model="vm.table.filter.state"
+                                    <select ng-model="vm.product.badge_category3"
                                             class="form-control edited" ui-validate="'$value>0'"
-                                            ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                            ng-class="{'edited':vm.product.badge_category3>0}" ng-options="m.id as m.name for m in vm.cate.c"></select>
                                     <div class="form-control-focus"> </div>
                                 </div>
                             </div>
@@ -69,8 +70,8 @@
                         <div class="form-group form-md-line-input has-success">
                             <label class="col-md-2 control-label">纪念章介绍</label>
                             <div class="col-md-10">
-                                <textarea class="form-control" rows="3" ng-class="{'edited':vm.activity.title}"
-                                          placeholder="纪念章介绍" ng-model="vm.activity.title"></textarea>
+                                <textarea class="form-control" rows="3" ng-class="{'edited':vm.product.badge_introduce}"
+                                          placeholder="纪念章介绍" ng-model="vm.product.badge_introduce"></textarea>
                             </div>
                         </div>
                     </div>
@@ -78,7 +79,8 @@
                         <div class="col-xs-4"></div>
                         <div class="col-xs-4">
                             <div class="tiles">
-                                <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files,1)"
+                                      data-multiple="vm.file.multiple" onclick="this.value = null">
                                     <div class="tile-body">
                                         <i class="fa fa-cloud-upload"></i>
                                     </div>
@@ -87,11 +89,7 @@
                                         <div class="number"> 100x100 </div>
                                     </div>
                                 </div>
-                                <ol>
-                                    <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                        {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                                    </li>
-                                </ol>
+                           
                             </div>
                         </div>
                         <div class="col-xs-4"></div>
@@ -113,8 +111,8 @@
                                 <label class="col-md-3 control-label">商品名称:</label>
                                 <div class="col-md-9">
                                     <input type="text" class="form-control"
-                                           ng-class="{'edited':vm.model.name}" placeholder="商品名称" maxlength="120"
-                                           required ng-model="vm.model.name">
+                                           ng-class="{'edited':vm.product.name}" placeholder="商品名称" maxlength="120"
+                                           required ng-model="vm.product.name">
                                 </div>
                             </div>
 
@@ -123,9 +121,9 @@
                             <div class="form-group form-md-line-input">
                                 <label class="col-md-3 control-label">商品价格:</label>
                                 <div class="col-md-9">
-                                    <input type="text" class="form-control"
-                                           ng-class="{'edited':vm.model.name}" placeholder="商品价格" maxlength="120"
-                                           required ng-model="vm.model.name">
+                                    <input type="number" class="form-control"
+                                           ng-class="{'edited':vm.product.price}" placeholder="商品价格" 
+                                           required ng-model="vm.product.price">
                                 </div>
                             </div>
 
@@ -136,9 +134,9 @@
                             <div class="form-group form-md-line-input">
                                 <label class="col-md-3 control-label">商品库存:</label>
                                 <div class="col-md-9">
-                                    <input type="text" class="form-control"
-                                           ng-class="{'edited':vm.model.name}" placeholder="商品库存" maxlength="120"
-                                           required ng-model="vm.model.name">
+                                    <input type="number" class="form-control"
+                                           ng-class="{'edited':vm.product.inventory}" placeholder="商品库存" maxlength="120"
+                                           required ng-model="vm.product.inventory">
                                 </div>
                             </div>
 
@@ -152,13 +150,13 @@
                                            data-toggle="dropdown" data-target=".dropdown1-parent"
                                            href="#">
                                             <div class="input-group">
-                                                <input type="text" class="form-control" data-ng-model="vm.gift.date"
+                                                <input type="text" class="form-control" data-ng-model="vm.product.online_time"
                                                        data-date-time-input="YYYY-MM-DD HH:mm">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                             </div>
                                         </a>
                                         <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                            <datetimepicker data-ng-model="vm.gift.date"
+                                            <datetimepicker data-ng-model="vm.product.online_time"
                                                             data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }"></datetimepicker>
                                         </ul>
                                     </div>
@@ -172,39 +170,96 @@
                             <div class="form-group form-md-line-input">
                                 <label class="col-md-3 control-label">选择标签</label>
                                 <div class="col-md-9">
-                                    <div ng-file-select="vm.file.onFileSelect($files)"
+                                    <div ng-file-select="vm.file.onFileSelect($files,2)"
                                          data-multiple="vm.file.multiple" title="选择图片"
                                          onclick="this.value = null"
                                          class="btn btn-upload">点击上传图片</div>
-                                    <ol>
-                                        <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                            {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                                        </li>
-                                    </ol>
+                                  
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-6">
-                            <div class="col-xs-4">
-                                <label>单一商品</label>
-                                <input type="radio" name="type" value="0" ng-model="vm.activity.type"/>
+                            <div class="form-group form-md-radios">
+                                <div class="md-radio-inline">
+                                    <div class="md-radio">
+                                        <input type="radio" id="radio6" name="radio2" class="md-radiobtn" value="0" checked
+                                               ng-model="vm.product.type">
+                                        <label for="radio6">
+                                            <span></span>
+                                            <span class="check"></span>
+                                            <span class="box"></span> 单一商品
+                                        </label>
+                                    </div>
+                                    <div class="md-radio">
+                                        <input type="radio" id="radio7" name="radio2" class="md-radiobtn" value="1"
+                                               ng-model="vm.product.type">
+                                        <label for="radio7">
+                                            <span></span>
+                                            <span class="check"></span>
+                                            <span class="box"></span> 组合商品
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-xs-4">
-                                <label>组合商品</label>
-                                <input type="radio" name="type" value="1" ng-model="vm.activity.type" />
-                            </div>
-                            <div class="col-xs-4">
-                                <button  type="button" ng-click="vm.cancel()">选择商品</button>
+                         
+                        </div>
+                    </div>
+                    <div ng-if="vm.product.type==1" class="row">
+                        <div class="tabbable-line">
+                            <ul class="nav nav-tabs">
+                                <li style="float: right" class="active">
+                                    <a data-toggle="tab" ng-click="vm.choose()" aria-expanded="true">添加商品</a>
+                                </li>
+                            </ul>
+                            <div class="tab-content">
+                                <table st-table="vm.table.data" class="table table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th st-sort="a">名称</th>
+                                            <th>创建时间</th>
+                                            <th>一级分类</th>
+                                            <th>二级分类</th>
+                                            <th>系列</th>
+                                            <th>基础成就</th>
+                                            <th>状态</th>
+                                            <th>操作</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
+                                            <td>{{row.a}}</td>
+                                            <td>{{row.b}}</td>
+                                            <td>{{row.c}}</td>
+                                            <td>{{row.balance}}</td>
+                                            <td>{{row.email}}</td>
+                                            <td>{{row.email}}</td>
+                                            <td>{{row.email}}</td>
+                                            <td>
+                                                <button type="button" ng-click="vm.delete(row)" class="btn btn-sm btn-danger">
+                                                    删除
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                    <tfoot>
+                                        <tr>
+                                            <td colspan="7">
+                                                <div pagination conf="vm.table.pageConfig"></div>
+                                            </td>
+                                        </tr>
+                                    </tfoot>
+                                </table>
+
+
                             </div>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-xs-6">
                             <div class="col-xs-4"></div>
                             <div class="col-xs-4">
                                 <div class="tiles">
-                                    <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                    <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files,3)" data-multiple="vm.file.multiple" onclick="this.value = null">
                                         <div class="tile-body">
                                             <i class="fa fa-cloud-upload"></i>
                                         </div>
@@ -213,11 +268,11 @@
                                             <div class="number"> 100x100 </div>
                                         </div>
                                     </div>
-                                    <ol>
+                                    <!--<ol>
                                         <li ng-repeat="(k,v) in vm.file.selectFiles">
                                             {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
                                         </li>
-                                    </ol>
+                                    </ol>-->
                                 </div>
                             </div>
                             <div class="col-xs-4"></div>
@@ -226,7 +281,7 @@
                             <div class="col-xs-4"></div>
                             <div class="col-xs-4">
                                 <div class="tiles">
-                                    <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                    <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files,4)" data-multiple="vm.file.multiple" onclick="this.value = null">
                                         <div class="tile-body">
                                             <i class="fa fa-cloud-upload"></i>
                                         </div>
@@ -235,18 +290,15 @@
                                             <div class="number"> 100x100 </div>
                                         </div>
                                     </div>
-                                    <ol>
-                                        <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                            {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                                        </li>
-                                    </ol>
+                                
                                 </div>
                             </div>
                             <div class="col-xs-4"></div>
                         </div>
                     </div>
 
-                    <div ueditor id="Container" config="{{vm.config }}"></div>
+                    <ueditor  config="editorConfig" ng-model="vm.product.content">
+                    </ueditor>
                 </div>
             </div>
           
