--- a/src/Trace/views/achievement/medal/index.html
+++ b/src/Trace/views/achievement/medal/index.html
@@ -85,15 +85,18 @@
                         <td>{{row.category2}}</td>
                         <td>{{row.category3}}</td>
                         <td>{{row.integration}}</td>
-                        <td>{{row.finish}}</td>
+                        <td>{{row.relation_count}}</td>
                         <td>{{row.achievement_val}}</td>
                         <td>{{row.designation}}</td>
-                        <td>{{row.status}}</td>
+                        <td>{{row.status==0?'未发布':'已发布'}}</td>
                         <td>
-                            <a href="#" ng-click="vm.edit(row)" >
+                            <a href="#" ng-if="row.status==0" ng-click="vm.edit(row)" >
                                 修改
                             </a>
-                            <a href="#" ng-click="vm.delete(row)" >
+                            <a href="#" ng-if="row.status==0" ng-click="vm.public(row)">
+                                发布
+                            </a>
+                            <a href="#" ng-if="row.status==0" ng-click="vm.delete(row)" >
                                 删除
                             </a>
                         </td>
